refactor(agent-tars): remove ui server logic from `@agent-tars/server`

--- a/packages/multimodal/agent-tars-cli/package.json
+++ b/packages/multimodal/agent-tars-cli/package.json
@@ -20,7 +20,8 @@
     "tars": "dist/cli/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "static"
   ],
   "scripts": {
     "dev": "rslib build --watch",
