refactor: filesystem and browser mcp (#595)

--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -24,7 +24,13 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.2"
   },
+  "peerDependencies": {
+    "@modelcontextprotocol/sdk": "^1.10.0"
+  },
   "devDependencies": {
+    "commander": "^13.1.0",
+    "@types/lodash.merge": "4.6.9",
+    "lodash.merge": "4.6.2",
     "@agent-infra/logger": "workspace:*",
     "@ghostery/adblocker-puppeteer": "2.5.2",
     "cross-fetch": "4.1.0",
