--- a/packages/agent-infra/mcp-servers/filesystem/package.json
+++ b/packages/agent-infra/mcp-servers/filesystem/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/mcp-server-filesystem",
-  "version": "0.0.1",
+  "version": "1.0.1-beta.7",
   "description": "MCP server for filesystem access",
   "license": "MIT",
   "type": "module",
