--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@multimodal/agent",
   "version": "0.1.0",
-  "description": "An infrastructure library for building effective Agents.",
+  "description": "An event-stream driven agent framework for building effective multimodal Agents.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
