--- a/packages/agent-infra/mcp-shared/package.json
+++ b/packages/agent-infra/mcp-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/mcp-shared",
-  "version": "0.0.1",
+  "version": "1.0.1-beta.9",
   "description": "MCP shared",
   "license": "MIT",
   "homepage": "https://modelcontextprotocol.io",
@@ -35,12 +35,11 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.10.2",
+    "@modelcontextprotocol/sdk": "^1.11.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@agent-infra/logger": "workspace:*",
-    "@ghostery/adblocker-puppeteer": "2.5.0",
     "cross-fetch": "4.1.0",
     "@rslib/core": "0.5.3",
     "tsx": "^4.19.3",
