--- a/packages/agent-infra/mcp-client/package.json
+++ b/packages/agent-infra/mcp-client/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@agent-infra/mcp-client",
-  "version": "0.5.0",
+  "version": "1.0.1-beta.9",
   "description": "An MCP Client to run servers for Electron apps, support same-process approaching",
-  "private": false,
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -20,7 +19,7 @@
     "test:integration": "vitest tests/integration"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.10.2",
+    "@modelcontextprotocol/sdk": "^1.11.2",
     "@agent-infra/mcp-shared": "workspace:*",
     "zod": "^3.23.8",
     "uuid": "^11.1.0"
