--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/mcp-server-browser",
-  "version": "0.0.1",
+  "version": "1.0.1-beta.9",
   "description": "MCP server for browser use access",
   "license": "MIT",
   "homepage": "https://modelcontextprotocol.io",
@@ -22,11 +22,17 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.10.2"
+    "@modelcontextprotocol/sdk": "^1.11.2"
+  },
+  "peerDependencies": {
+    "@modelcontextprotocol/sdk": "^1.10.0"
   },
   "devDependencies": {
+    "commander": "^13.1.0",
+    "@types/lodash.merge": "4.6.9",
+    "lodash.merge": "4.6.2",
     "@agent-infra/logger": "workspace:*",
-    "@ghostery/adblocker-puppeteer": "2.5.0",
+    "@ghostery/adblocker-puppeteer": "2.5.2",
     "cross-fetch": "4.1.0",
     "@rslib/core": "0.5.3",
     "turndown": "^7.2.0",
