--- a/packages/multimodal/agent-tars/package.json
+++ b/packages/multimodal/agent-tars/package.json
@@ -7,13 +7,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./cli": {
-      "import": "./dist/cli/index.mjs",
-      "require": "./dist/cli/index.js"
+      "require": "./dist/index.js"
     }
   },
   "files": [
