--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -49,6 +49,9 @@
     "@multimodal/llm-client": "workspace:*"
   },
   "devDependencies": {
+    "@agent-infra/browser": "workspace:*",
+    "@ui-tars/operator-browser": "workspace:*",
+    "@ui-tars/action-parser": "workspace:*",
     "@rslib/core": "0.5.4",
     "@types/node": "^20.10.4",
     "tsx": "^4.19.2",
