--- a/packages/multimodal/agent-tars/package.json
+++ b/packages/multimodal/agent-tars/package.json
@@ -28,7 +28,9 @@
     "@agent-infra/mcp-server-filesystem": "workspace:*",
     "@agent-infra/mcp-server-search": "workspace:*",
     "@agent-infra/search": "workspace:*",
+    "@agent-infra/browser": "workspace:*",
     "@agent-infra/browser-search": "workspace:*",
+    "@ui-tars/operator-browser": "workspace:*",
     "@agent-infra/shared": "workspace:*"
   },
   "devDependencies": {
