feat(mcp-browser): add userDataDir, wsEndpoint, userAgent

--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -6,6 +6,11 @@
   "homepage": "https://modelcontextprotocol.io",
   "bugs": "https://github.com/modelcontextprotocol/servers/issues",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bytedance/UI-TARS-desktop",
+    "directory": "packages/agent-infra/mcp-servers/browser"
+  },
   "bin": {
     "mcp-server-browser": "dist/index.cjs"
   },
