--- a/packages/agent-infra/browser-use/package.json
+++ b/packages/agent-infra/browser-use/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/browser-use",
-  "version": "0.0.2-beta.0",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
