--- a/packages/agent-infra/search/browser-search/package.json
+++ b/packages/agent-infra/search/browser-search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/browser-search",
-  "version": "0.0.2-beta.0",
+  "version": "0.0.2",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
