--- a/packages/agent-infra/mcp-servers/commands/package.json
+++ b/packages/agent-infra/mcp-servers/commands/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/mcp-server-commands",
-  "version": "1.0.1-beta.14",
+  "version": "1.1.0",
   "description": "An MCP server to run arbitrary commands",
   "type": "module",
   "main": "./dist/server.cjs",
@@ -8,6 +8,11 @@
   "types": "./dist/server.d.ts",
   "bin": {
     "mcp-server-commands": "./dist/index.cjs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bytedance/UI-TARS-desktop",
+    "directory": "packages/agent-infra/mcp-servers/commands"
   },
   "files": [
     "dist"
