--- a/packages/agent-infra/mcp-servers/filesystem/package.json
+++ b/packages/agent-infra/mcp-servers/filesystem/package.json
@@ -7,9 +7,11 @@
   "main": "./dist/server.cjs",
   "module": "./dist/server.js",
   "types": "./dist/server.d.ts",
+  "homepage": "https://github.com/bytedance/UI-TARS-desktop",
+  "bugs": "https://github.com/bytedance/UI-TARS-desktop/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bytedance/UI-TARS-desktop",
+    "url": "git@github.com:bytedance/UI-TARS-desktop.git",
     "directory": "packages/agent-infra/mcp-servers/filesystem"
   },
   "bin": {
