--- a/packages/multimodal/agent-tars-cli/package.json
+++ b/packages/multimodal/agent-tars-cli/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "cac": "^6.7.14",
+    "imgcat": "2.3.0",
     "@multimodal/config-loader": "workspace:*",
     "@agent-tars/core": "workspace:*",
     "@agent-tars/server": "workspace:*",
