--- a/packages/multimodal/mcp-agent/package.json
+++ b/packages/multimodal/mcp-agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agent-tars/core",
+  "name": "@multimodal/mcp-agent",
   "version": "0.0.0",
   "description": "Agent TARS core.",
   "main": "dist/index.js",
@@ -22,19 +22,12 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
-    "@multimodal/mcp-agent": "workspace:*",
-    "@agent-infra/mcp-server-browser": "workspace:*",
-    "@agent-infra/mcp-server-commands": "workspace:*",
-    "@agent-infra/mcp-server-filesystem": "workspace:*",
-    "@agent-infra/mcp-server-search": "workspace:*",
-    "@agent-infra/search": "workspace:*",
-    "@agent-infra/browser": "workspace:*",
-    "@agent-infra/browser-search": "workspace:*",
-    "@ui-tars/operator-browser": "workspace:*",
-    "@agent-infra/shared": "workspace:*"
+    "@multimodal/agent": "workspace:*",
+    "@agent-infra/mcp-client": "workspace:*",
+    "@modelcontextprotocol/sdk": "^1.10.2",
+    "@agent-infra/logger": "workspace:*"
   },
   "devDependencies": {
-    "@multimodal/mcp-agent": "workspace:*",
     "@rslib/core": "0.5.4",
     "@types/node": "^20.10.4",
     "typescript": "^5.5.3"
