refactor(agent): structure

--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -34,8 +34,8 @@
     "prepublishOnly": "pnpm run build",
     "test": "vitest run && npm run test:agent:all",
     "test:watch": "vitest",
-    "test:agent": "tsx src/test-utils/run-test.ts",
-    "test:agent:update": "tsx src/test-utils/run-test.ts --update",
+    "test:agent": "tsx test-runner/run-test.ts",
+    "test:agent:update": "tsx test-runner/run-test.ts --update",
     "test:agent:all": "npm run test:agent tool_calls_basic && npm run test:agent tool_calls_prompt-engineering-impl && npm run test:agent tool_calls_streaming && npm run test:agent tool_calls_streaming_prompt-engineering-impl"
   },
   "dependencies": {
