--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -40,11 +40,9 @@
   },
   "dependencies": {
     "zod-to-json-schema": "3.24.3",
-    "openai": "4.87.3",
-    "zod": "3.24.2",
-    "@types/json-schema": "^7.0.15",
     "@agent-infra/logger": "workspace:*",
-    "@multimodal/llm-client": "workspace:*"
+    "@multimodal/llm-client": "workspace:*",
+    "@multimodal/agent-interface": "workspace:*"
   },
   "devDependencies": {
     "@agent-infra/browser": "workspace:*",
