--- a/packages/agent-infra/mcp-servers/filesystem/package.json
+++ b/packages/agent-infra/mcp-servers/filesystem/package.json
@@ -28,9 +28,11 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.2"
+    "@modelcontextprotocol/sdk": "^1.11.2",
+    "@agent-infra/mcp-http-server": "workspace:*"
   },
   "devDependencies": {
+    "commander": "^13.1.0",
     "diff": "^5.1.0",
     "glob": "^10.3.10",
     "minimatch": "^10.0.1",
