fix(agent-snapshot): unhandled error during the test run.
⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ Unhandled Errors ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯

Vitest caught 1 unhandled error during the test run.
This might cause false positive tests. Resolve unhandled errors to make sure your tests are not affected.

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ Unhandled Rejection ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯
Error: No event stream snapshot found for non-existent/initial
 ❯ SnapshotManager.verifyEventStreamSnapshot ../agent-snapshot/dist/webpack:/@multimodal/agent-snapshot/src/snapshot-manager.ts:145:13
 ❯ processTicksAndRejections node:internal/process/task_queues:105:5
 ❯ LLMMocker.verifyInitialEventStreamState ../agent-snapshot/dist/webpack:/@multimodal/agent-snapshot/src/llm-mocker.ts:190:9

This error originated in "snapshot/index.test.ts" test file. It doesn't mean the error was thrown inside the file itself, but while it was running.
⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯

Vitest caught 1 unhandled error during the test run.
This might cause false positive tests. Resolve unhandled errors to make sure your tests are not affected.

--- a/packages/multimodal/agent/package.json
+++ b/packages/multimodal/agent/package.json
@@ -32,12 +32,10 @@
     "build": "rslib build",
     "prepare": "npm run build",
     "prepublishOnly": "pnpm run build",
-    "test": "vitest run && npm run test:agent:all",
+    "test": "vitest run",
     "test:watch": "vitest",
-    "test:agent": "tsx test-runner/run-test.ts",
-    "test:agent:update": "tsx test-runner/run-test.ts --update",
-    "test:agent:all": "npm run test:agent tool_calls_basic && npm run test:agent tool_calls_prompt-engineering-impl && npm run test:agent tool_calls_streaming && npm run test:agent tool_calls_streaming_prompt-engineering-impl",
-    "test:runner": "vitest run tests/test-runner/"
+    "agent:snapshot:genreate": "npx tsx snapshot/runner.ts generate all",
+    "agent:snapshot:test": "npx vitest snapshot/index.test.ts"
   },
   "dependencies": {
     "zod-to-json-schema": "3.24.3",
