--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -27,7 +27,7 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
-    "@agent-infra/mcp-http-server": "workspace:*",
+    "mcp-http-server": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.11.2"
   },
   "devDependencies": {
