--- a/packages/agent-infra/mcp-benchmark/package.json
+++ b/packages/agent-infra/mcp-benchmark/package.json
@@ -12,14 +12,14 @@
     "directory": "packages/agent-infra/mcp-benchmark"
   },
   "scripts": {
-    "dev": "vitest bench",
-    "benchmark": "vitest bench --silent"
+    "dev": "vitest bench --run",
+    "benchmark": "vitest bench --run --silent"
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.11.2",
     "mcp-proxy": "^3.0.3",
     "get-port": "^7.1.0",
-    "@agent-infra/mcp-http-server": "workspace:*",
+    "mcp-http-server": "workspace:*",
     "@agent-infra/mcp-server-browser": "workspace:*",
     "@agent-infra/mcp-server-commands": "workspace:*",
     "@agent-infra/mcp-server-filesystem": "workspace:*",
