--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -48,7 +48,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3-pip
           pip3 install --upgrade pip
-          pip3 install mcp-proxy
+          pip3 install uv
       - name: Install dependencies
         run: pnpm install
       - name: Run MCP benchmark
