--- a/packages/agent-infra/mcp-benchmark/package.json
+++ b/packages/agent-infra/mcp-benchmark/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agent-infra/mcp-benchmark",
   "private": true,
-  "version": "1.1.1-beta.3",
+  "version": "1.1.1",
   "description": "MCP Servers benchmark with different transports and http-proxy",
   "license": "MIT",
   "homepage": "https://github.com/bytedance/UI-TARS-desktop",
