--- a/packages/agent-infra/mcp-http-server/package.json
+++ b/packages/agent-infra/mcp-http-server/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@agent-infra/mcp-shared",
+  "name": "mcp-http-server",
   "version": "1.1.1",
-  "description": "MCP shared",
+  "description": "High performance HTTP Server for MCP",
   "license": "MIT",
   "homepage": "https://github.com/bytedance/UI-TARS-desktop",
   "bugs": "https://github.com/bytedance/UI-TARS-desktop/issues",
   "repository": {
     "type": "git",
     "url": "git@github.com:bytedance/UI-TARS-desktop.git",
-    "directory": "packages/agent-infra/mcp-shared"
+    "directory": "packages/agent-infra/mcp-http-server"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -18,18 +18,7 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./client": {
-      "import": "./dist/client/index.mjs",
-      "require": "./dist/client/index.js",
-      "types": "./dist/client/index.d.ts"
-    },
-    "./server": {
-      "import": "./dist/server/index.mjs",
-      "require": "./dist/server/index.js",
-      "types": "./dist/server/index.d.ts"
-    },
-    "./package.json": "./package.json"
+    }
   },
   "files": [
     "dist"
@@ -41,10 +30,11 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.2",
-    "zod": "^3.23.8"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@agent-infra/logger": "workspace:*",
+    "@types/express": "^5.0.1",
     "cross-fetch": "4.1.0",
     "@rslib/core": "0.5.3",
     "tsx": "^4.19.3",
