--- a/packages/agent-infra/mcp-servers/browser/package.json
+++ b/packages/agent-infra/mcp-servers/browser/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@agent-infra/mcp-server-browser",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "MCP server for browser use access",
   "license": "MIT",
-  "homepage": "https://modelcontextprotocol.io",
-  "bugs": "https://github.com/modelcontextprotocol/servers/issues",
+  "homepage": "https://github.com/bytedance/UI-TARS-desktop",
+  "bugs": "https://github.com/bytedance/UI-TARS-desktop/issues",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bytedance/UI-TARS-desktop",
+    "url": "git@github.com:bytedance/UI-TARS-desktop.git",
     "directory": "packages/agent-infra/mcp-servers/browser"
   },
   "bin": {
@@ -27,9 +27,12 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
+    "mcp-http-server": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.11.2"
   },
   "devDependencies": {
+    "mcp-proxy": "^3.0.3",
+    "get-port": "^7.1.0",
     "commander": "^13.1.0",
     "@types/lodash.merge": "4.6.9",
     "lodash.merge": "4.6.2",
