--- a/packages/agent-infra/mcp-servers/filesystem/package.json
+++ b/packages/agent-infra/mcp-servers/filesystem/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@agent-infra/mcp-server-filesystem",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "MCP server for filesystem access",
   "license": "MIT",
   "type": "module",
   "main": "./dist/server.cjs",
   "module": "./dist/server.js",
   "types": "./dist/server.d.ts",
+  "homepage": "https://github.com/bytedance/UI-TARS-desktop",
+  "bugs": "https://github.com/bytedance/UI-TARS-desktop/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bytedance/UI-TARS-desktop",
+    "url": "git@github.com:bytedance/UI-TARS-desktop.git",
     "directory": "packages/agent-infra/mcp-servers/filesystem"
   },
   "bin": {
@@ -26,9 +28,11 @@
     "watch": "rslib build --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.2"
+    "@modelcontextprotocol/sdk": "^1.11.2",
+    "mcp-http-server": "workspace:*"
   },
   "devDependencies": {
+    "commander": "^13.1.0",
     "diff": "^5.1.0",
     "glob": "^10.3.10",
     "minimatch": "^10.0.1",
