--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -3,16 +3,16 @@ on:
     types: [opened, synchronize, reopened]
     branches:
       - '**'
-  push:
-    branches:
-      - 'main'
+    paths:
+      - 'packages/agent-infra/mcp-*/**'
+      - '.github/workflows/benchmark.yml'
 
 permissions:
   id-token: write
   contents: read
   attestations: read
 
-name: CI Test, Typecheck
+name: Benchmark
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-test
   cancel-in-progress: true
@@ -22,9 +22,9 @@ env:
   HUSKY: 0
 
 jobs:
-  test:
-    name: Test & Typecheck
-    runs-on: macos-latest
+  mcp_benchmark:
+    name: Benchmark
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -43,17 +43,13 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
+      - name: Install Python dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          pip3 install --upgrade pip
+          pip3 install uv
       - name: Install dependencies
         run: pnpm install
-      - name: Run typecheck
-        run: npm exec turbo run typecheck
-      - name: Run test
-        run: npm exec turbo run coverage
-      - name: Upload coverage data
-        uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
-        with:
-          fail_ci_if_error: true
-          disable_search: true
-          files: ./coverage/lcov.info
-          token: ${{ secrets.CODECOV_TOKEN }}
-          verbose: false
+      - name: Run MCP benchmark
+        run: cd packages/agent-infra/mcp-benchmark && pnpm run benchmark
