--- a/packages/agent-infra/mcp-servers/commands/package.json
+++ b/packages/agent-infra/mcp-servers/commands/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-infra/mcp-server-commands",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "An MCP server to run arbitrary commands",
   "type": "module",
   "main": "./dist/server.cjs",
@@ -9,9 +9,11 @@
   "bin": {
     "mcp-server-commands": "./dist/index.cjs"
   },
+  "homepage": "https://github.com/bytedance/UI-TARS-desktop",
+  "bugs": "https://github.com/bytedance/UI-TARS-desktop/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bytedance/UI-TARS-desktop",
+    "url": "git@github.com:bytedance/UI-TARS-desktop.git",
     "directory": "packages/agent-infra/mcp-servers/commands"
   },
   "files": [
@@ -29,9 +31,11 @@
     "test:integration": "vitest tests/integration"
   },
   "dependencies": {
+    "mcp-http-server": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.11.2"
   },
   "devDependencies": {
+    "commander": "^13.1.0",
     "tsx": "^4.19.3",
     "@rslib/core": "0.5.3",
     "zod": "^3.23.8",
