--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -65,7 +65,8 @@
   },
   "dependencies": {
     "@computer-use/node-mac-permissions": "2.2.2",
-    "sharp": "0.33.3"
+    "sharp": "0.33.3",
+    "jose": "^6.0.11"
   },
   "devDependencies": {
     "@common/electron-build": "workspace:*",
@@ -129,7 +130,8 @@
     "vitest": "^3.0.8",
     "zustand": "^5.0.0",
     "@tailwindcss/vite": "4.1.3",
-    "tailwindcss": "4.1.3"
+    "tailwindcss": "4.1.3",
+    "node-machine-id": "^1.1.12"
   },
   "engines": {
     "node": ">=20.x"
