--- a/packages/multimodal/agent-tars/package.json
+++ b/packages/multimodal/agent-tars/package.json
@@ -38,7 +38,7 @@
     "@agent-infra/shared": "workspace:*"
   },
   "devDependencies": {
-    "@multimodal/mcp-agent": "workspace:*",
+    "@multimodal/agent": "workspace:*",
     "@multimodal/agent-snapshot": "workspace:*",
     "@rslib/core": "0.5.4",
     "@types/node": "^20.10.4",
