--- a/packages/agent-infra/browser-use/package.json
+++ b/packages/agent-infra/browser-use/package.json
@@ -24,7 +24,11 @@
     "test:watch": "vitest",
     "test:e2e": "vitest --config vitest.e2e.config.ts",
     "coverage": "vitest run --coverage",
-    "test:e2e:local": "vitest --config vitest.e2e.config.ts local-browser.e2e.test.ts"
+    "test:e2e:local": "vitest --config vitest.e2e.config.ts local-browser.e2e.test.ts" ,
+    "start": "electron-forge start",
+    "make": "electron-forge make",
+    "package" : "electron-forge package",
+    "publish" : "electron-forge publish"
   },
   "dependencies": {
     "zod": "^3.23.8",
@@ -45,5 +49,20 @@
     "vitest": "3.0.7",
     "@vitest/coverage-v8": "3.0.7",
     "@rslib/core": "0.5.3"
+  },
+
+  "config" :{
+    "forge": {
+      "makers": [
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-appimage",
+          "config": {}
+        }
+      ]
+    }
   }
 }
