--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -12,7 +12,6 @@
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "asar:analyze": "asar extract out/Agent\\ TARS-darwin-arm64/Agent\\ TARS.app/Contents/Resources/app.asar ./dist/asar",
-    "prepare": "npm run build:reporter",
     "package": "electron-forge package",
     "dev:electron": "electron-vite dev",
     "start:electron": "electron .",
@@ -23,7 +22,7 @@
     "build:web": "vite build --config vite.config.web.ts",
     "serve:web": "vite preview --config vite.config.web.ts",
     
-    "start:web": "serve -s dist/web",
+    "start:web": "serve -s dist/web -1 tcp://0.0.0.0:$PORT",
     "test": "vitest run",
     "build:dist": "cross-env NODE_ENV=production electron-vite build",
     "build:e2e": "npm run build:dist && cross-env CI=e2e npm run package",
