--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -22,7 +22,7 @@
     "dev:web":      "vite --config vite.config.web.ts",
     "build:web":    "vite build --config vite.config.web.ts",
     "preview:web":  "vite preview --config vite.config.web.ts --host 0.0.0.0 --port $PORT",
-    "start:web":    "serve -s dist/web -l 0.0.0.0:$PORT",
+    "start:web":    "vite preview --config vite.config.web.ts --host 0.0.0.0 --port $PORT",
 
     "test":         "vitest run",
     "test:e2e":     "playwright test",
