--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -22,7 +22,7 @@
     "dev:web":      "vite --config vite.config.web.ts",
     "build:web":    "vite build --config vite.config.web.ts",
     "preview:web":  "vite preview --config vite.config.web.ts --host 0.0.0.0 --port $PORT",
-    "start:web":    "vite preview --config vite.config.web.ts --host 0.0.0.0 --port $PORT",
+    "start:web":    "npm run preview:web",
 
     "test":         "vitest run",
     "test:e2e":     "playwright test",
@@ -44,7 +44,9 @@
     "@computer-use/node-mac-permissions": "2.2.2",
     "@agent-infra/mcp-server-commands": "workspace:*",
     "@agent-infra/mcp-server-filesystem": "workspace:*",
-    "@agent-infra/mcp-server-browser": "workspace:*"
+    "@agent-infra/mcp-server-browser": "workspace:*",
+    "serve": "^14.2.0"
+    
   },
   "devDependencies": {
     "serve": "^14.2.0",
